# OADF

./: README.md  install.sh
docker/: .docker.yaml.swp  docker.yaml  pull_docker.sh  run_docker.sh  service-entrypoint.sh
docker/scripts/: configure_usbfs.sh  docker-entrypoint.sh
sandbox/: .rosinstall
sandbox/CM_ProjectDirectory_UNICARagil/: .gitignore  CMStart.sh  README.md  VDSstart.sh  publish
sandbox/CM_ProjectDirectory_UNICARagil/Data/Chassis/: autoSHUTTLE_front.skc  autoSHUTTLE_rear.skc
sandbox/CM_ProjectDirectory_UNICARagil/Data/Config/: CMRosIFParameters  DVA  GUI  Plugins  Preferences.sce  Project  Settings.sce  SimParameters
sandbox/CM_ProjectDirectory_UNICARagil/Data/Pic/: AUTOelfe.tcl  AUTOshuttle.tcl  AUTOtaxi.tcl  Luxury.tcl
sandbox/CM_ProjectDirectory_UNICARagil/Data/Road/: ramp.rd5  spiral.rd5  straight.rd5
sandbox/CM_ProjectDirectory_UNICARagil/Data/Sensor/: LidarRSI_test  vlp16
sandbox/CM_ProjectDirectory_UNICARagil/Data/TestRun/: ramp  spiral  straight  straight_acc
sandbox/CM_ProjectDirectory_UNICARagil/Data/Tire/: RT_195_55R20_p2.50  UNICARTire_Magic_Formula_CM
sandbox/CM_ProjectDirectory_UNICARagil/Data/Vehicle/: autoSHUTTLE_with_FTR.car
sandbox/CM_ProjectDirectory_UNICARagil/Movie/: Camera.cfg.autobakup  DriverTrajectory.tclgeo  VDS-1.cfg  VDS-2.cfg  VDS-3.cfg  VDS-4.cfg  VDS-5.cfg  VDS-6.cfg  VDS-7.cfg  VDS.cfg
sandbox/CM_ProjectDirectory_UNICARagil/Plugins/: PlugInterfaces
sandbox/CM_ProjectDirectory_UNICARagil/config/dcmservice/: README.md
sandbox/CM_ProjectDirectory_UNICARagil/dcm-core/: LICENSE  dcm_core.h  dcm_core_FL_uss.h  dcm_core_OL_fus.h  dcm_core_OL_radar.h  dcm_core_cspline.h  dcm_core_dcm_shpathplot.h  dcm_core_dcm_shpathstatus.h  dcm_core_dcmstatus.h  dcm_core_ecuselect.h  dcm_core_err.h  dcm_core_interp_shpath.h  dcm_core_interp_shpathstatus.h  dcm_core_lspline.h  dcm_core_net_tsqueue_radar.h  dcm_core_odot_uss.h  dcm_core_param_dcm_shpath.h  dcm_core_param_ps_fusion.h  dcm_core_ps_ECUstatus.h  dcm_core_ps_Rstatus.h  dcm_core_ps_fusionstatus.h  dcm_core_sdi_uss.h  dcm_core_tmp_pos_ell_deg_shpath.h  dcm_core_vds.h  dcm_core_vds_enu.h  dcm_ext_interface.h  dcm_param.h
sandbox/CM_ProjectDirectory_UNICARagil/ftr-core/: .gitignore  FTR.h  FTRparameter.h  ftr_definitions.h  ftr_interface.h  ringbuffer.hpp
sandbox/CM_ProjectDirectory_UNICARagil/include/: DriverTrajectory.h
sandbox/CM_ProjectDirectory_UNICARagil/r5_common/: .gitignore  .gitmodules  README.md  common_definitions.h  common_functions.cpp  common_functions.h  common_parameters.h
sandbox/CM_ProjectDirectory_UNICARagil/ros/: IPGDriverTrajectory_ISO_LaneChange.bag
sandbox/CM_ProjectDirectory_UNICARagil/src/: FTR_CM.cpp  FTR_CM.h  FZS_cm.h  Makefile  MyModels.h  UnicarModels.h  User.cpp  User.h  VehicleControl_SH.cpp  VehicleControl_UNICAR.cpp  cmap24.h  dcm_cm.cpp  dcm_cm.h  dcm_cm_global.cpp  dcm_cm_param.cpp  dcm_cm_param.h  tp_cm.cpp  tp_cm.h
sandbox/CM_ProjectDirectory_UNICARagil/src_cm4sl/: Makefile  UNICAR_Model.slx
sandbox/CM_ProjectDirectory_UNICARagil/tp-core/: tp_core.cpp  tp_core.h  tp_core_err.h  tp_core_interface.cpp  tp_core_param_path.h  tp_core_param_traj.h  tp_core_pathstatus.h  tp_core_tmp_pos_ell_deg_path.h  tp_core_tmp_pos_ell_deg_traj.h  tp_core_tpstatus.h  tp_core_trajstatus.h  tp_ext_interface.cpp  tp_ext_interface.h  tp_global.cpp  tp_param.cpp  tp_param.h
sandbox/launch/: .rosinstall  _setup_util.py
sandbox/launch/share/lanelet_map_launch/: package.xml
sandbox/launch/share/lanelet_map_launch/cmake/: lanelet_map_launchConfig.cmake
sandbox/launch/share/lanelet_map_launch/launch/: lanelet_map.launch
sandbox/launch/share/lanelet_map_launch/launch/vehicle_launchfiles/: ego_wrapper.launch
sandbox/launch/share/lanelet_map_launch/res/: campus_east_full_bidirectional_split.osm  campus_east_full_roadmap.osm  characteristics_ekla.yaml  coincar.rviz  ludwigsburg_large.osm  ludwigsburg_large_roadmap.osm  parameters.yaml  ramp.osm  spiral.osm  straight.osm
sandbox/msg/behavior_msgs/: CMakeLists.txt  CODEOWNERS  README.md  package.xml
sandbox/msg/behavior_msgs/msg/: Corridor.msg  CorridorArray.msg  Covariance2d.msg  Gaussian2d.msg  GaussianMixture2d.msg  Indicator.msg  LaneletSequence.msg  MotionCharacteristics.msg  OccupanciesPrediction.msg  OccupanciesPredictions.msg  Occupancy.msg  PedestrianOrientation.msg  PedestrianPrediction.msg  PedestrianPredictions.msg  PedestrianPredictionsArray.msg  PlanningCorridor.msg  PlanningCorridorArray.msg  PointWithVelocityObjective.msg  Prediction1D.msg  SimpleObjectState1D.msg  SimpleObjectState1DArray.msg  StampedPose1D.msg  VonMises.msg  VonMisesMixture.msg  WeightedGaussian2d.msg  WeightedVonMises.msg
sandbox/msg/controller_msgs_ros/: CMakeLists.txt  CODEOWNERS  README.md  custom.cmake  package.xml
sandbox/msg/controller_msgs_ros/msg/: BehaviourChangeVirtualStop.msg  BehaviourInfo.msg  BehaviourLaneChange.msg  BehaviourVirtualStop.msg  ControlRef.msg  StampedFloat64.msg  Trajectory.msg
sandbox/msg/controller_msgs_ros/res/: ControlRef.bmr  ControlRef.saved
sandbox/msg/lanelet_msgs/: CMakeLists.txt  README.md  custom.cmake  package.xml
sandbox/msg/lanelet_msgs/msg/: Bounds.msg  BoundsStamped.msg  Lanelet.msg  LaneletArrayStamped.msg  LaneletMatch.msg  LaneletMatchedObjectState.msg  LaneletMatchedObjectStateArray.msg  LaneletOsmString.msg  LaneletRelation.msg  LaneletRelationStamped.msg  LaneletStamped.msg  LaneletWithFrame.msg  Path.msg  PathStamped.msg  Point.msg  Projection.msg  RegulatoryElement.msg  RegulatoryElementMember.msg  RegulatoryElementMemberStamped.msg  RegulatoryElementStamped.msg
sandbox/msg/lanelet_msgs/srv/: FindByAttribute.srv  GetLaneletRelations.srv  GetLanelets.srv  GetPath.srv  LaneletsAround.srv  LaneletsInBB.srv
sandbox/msg/oadf_msgs/: CODEOWNERS  README.md
sandbox/msg/oadf_msgs/msg/: IPGDriverPose.msg  (+6 more)
sandbox/oadf_msgs/: CMakeLists.txt  package.xml
sandbox/oadf_msgs/msg/: MotionState.msg  ObjectClassification.msg  ObjectStateArray.msg
scripts/: roslaunch.sh  setup_docker.bash  setup_install.bash
services/: base.sh  planning.sh
(+232 files in other folders)
