<?xml version="1.0"?>
<package format="2">
  <name>oadf_msgs</name>
  <version>0.0.0</version>
  <description>OADF messages (UnicarAgil)</description>

  <license>UnicarAgil exclusive</license>
  <maintainer email="eduardo.molinos@kit.edu">Eduardo Molinos</maintainer>
  <author email="eduardo.molinos@kit.edu">Eduardo Molinos</author>
  <url type="repository">https://gitlab.mrt.uni-karlsruhe.de/MRT/private/molinos/oadf_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <depend>std_msgs</depend>


  <depend>geometry_msgs</depend>

  <depend>shape_msgs</depend>
  <!--
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <!--
    Example:
    <depend>mrt_opencv</depend>
  -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
