<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>behavior_msgs</name>
  <version>1.0.2</version>
  <description>ROS messages for the behavior ogeneration of automated vehicles</description>

  <license>MRT</license>
  <maintainer email="piotr.orzechowski@kit.edu">Piotr Orzechowski</maintainer>
  <author email="naumann@fzi.de">Maximilian Naumann</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>

  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <depend>roslib</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>