<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>controller_msgs_ros</name>
  <version>0.0.0</version>
  <description>This repository contains ROS message definitions for (car) controller related</description>

  <license>MRT</license>
  <maintainer email="felix.hauser@kit.edu">Felix Hauser</maintainer>
  <author email="ole.salscheider@kit.edu">Niels Ole Salscheider</author>
  <url type="repository">https://gitlab.mrt.uni-karlsruhe.de/MRT/draft/controller_msgs_ros.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>
  
  <build_depend>roscpp</build_depend>
  <!-- <build_depend>rospy</build_depend> Use this instead of roscpp  when writing a python node -->
  <depend>roslib</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  
  <!-- 
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build 
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to 
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this 
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <!-- 
    Example:
    <depend>libopencv-dev</depend> 
  -->

  <!--Export rosbag migration rule-->
  <depend>rosbag_migration_rule</depend>
  <export>
    <rosbag_migration_rule rule_file="res/ControlRef.bmr" />
  </export>
</package>